# lib/cocina/models/related_resource.rb
@@ -2,8 +2,9 @@
 
 module Cocina
   module Models
-    class Description < Struct
-      attribute :title, Types::Strict::Array.of(DescriptiveValueRequired).default([].freeze)
+    class RelatedResource < Struct
+      attribute :type, Types::Strict::String.meta(omittable: true)
+      attribute :title, Types::Strict::Array.of(DescriptiveValue).meta(omittable: true)
       attribute :contributor, Types::Strict::Array.of(Contributor).meta(omittable: true)
       attribute :event, Types::Strict::Array.of(Event).meta(omittable: true)
       attribute :form, Types::Strict::Array.of(DescriptiveValue).meta(omittable: true)
@@ -14,13 +15,7 @@ module Cocina
       # Stanford persistent URL associated with the resource.
       attribute :purl, Types::Strict::String.meta(omittable: true)
       attribute :access, DescriptiveAccessMetadata.optional.meta(omittable: true)
-      attribute :relatedResource, Types::Strict::Array.of(RelatedResource).meta(omittable: true)
-      attribute :marcEncodedData, Types::Strict::Array.of(DescriptiveValue).meta(omittable: true)
-      attribute :adminMetadata, DescriptiveAdminMetadata.optional.meta(omittable: true)
 
-      def self.new(attributes = default_attributes, safe = false, validate = true, &block)
-        Validator.validate(self, attributes.with_indifferent_access) if validate && name
-        super(attributes, safe, &block)
       end
     end
   end
